--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JDLT developer technical challenge",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"  
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,11 @@
   },
   "homepage": "https://github.com/JDLT-Ltd/dev-challenge#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "express": "^4.16.4",
+    "jquery": "^3.2.1",
+    "mongoose": "^5.5.4",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
