seeded suppliers and products and all working

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon", 
+    "start": "nodemon",
     "seed": "node db/seeds.js"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/JDLT-Ltd/dev-challenge#readme",
   "dependencies": {
+    "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "bootstrap": "^3.3.7",
     "express": "^4.16.4",
