implementing React in the front end

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "dev-challenge",
   "version": "1.0.0",
   "description": "JDLT developer technical challenge",
-  "main": "index.html",
+  "main": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon",
+    "start:server": "nodemon",
+    "start:client": "webpack-dev-server --mode=development",
     "seed": "node db/seeds.js"
   },
   "repository": {
@@ -19,12 +20,31 @@
   },
   "homepage": "https://github.com/JDLT-Ltd/dev-challenge#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.3.1",
     "express": "^4.16.4",
-    "jquery": "^3.2.1",
+    "jquery": "^3.4.0",
     "mongoose": "^5.5.4",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
